--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/koumoul-dev/vuetify-jsonschema-form#readme",
   "dependencies": {
+    "ajv": "^6.12.0",
     "markdown-it": "^8.4.2",
     "match-all": "^1.2.5",
     "property-expr": "^1.5.1",
